--- a/image.yaml
+++ b/image.yaml
@@ -1,8 +1,8 @@
+schema_version: 1
 name: "jboss-datagrid-7/datagrid72"
 description: "Red Hat JBoss Data Grid 7.2 container image"
 version: "7.2.0"
 from: "jboss/openjdk18-rhel7:1.0"
-user: 185
 labels:
     - name: "org.jboss.deployments-dir"
       value: "/opt/datagrid/standalone/deployments"
@@ -29,20 +29,16 @@ ports:
     - value: 8080
     - value: 8787
       expose: false
-cmd:
-    - "/opt/datagrid/bin/standalone.sh"
-    - "-b"
-    - "0.0.0.0"
-scripts:
-    - package: datagrid
-      exec: install.sh
-sources:
-    - artifact: jboss-datagrid-7.2.0-server.zip
+run:
+  user: 185
+  cmd:
+      - "/opt/datagrid/bin/standalone.sh"
+      - "-b"
+      - "0.0.0.0"
+modules:
+  install:
+    - name: datagrid
+artifacts:
+    - path: jboss-datagrid-7.2.0-server.zip
       md5: 411376fedbd0df3ed373ae56e0a69c3c #DR2
-      hint: "Artifact is available on Customer Portal: https://access.redhat.com/jbossnetwork/restricted/softwareDetail.html?softwareId=50851&product=data.grid&version=&downloadType=distributions"
-dogen:
-    version: 2.4.3
-    plugins:
-        dist_git:
-            repo: jboss-datagrid-7-docker
-            branch: jb-datagrid72
+      description: "Artifact is available on Customer Portal: https://access.redhat.com/jbossnetwork/restricted/softwareDetail.html?softwareId=50851&product=data.grid&version=&downloadType=distributions"
